--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               * Iot , Cloud Computing Workshop with Raspberry Pi (3 - days)<br>
               * Golden Badge Problem Solving Hackerrank
             </p>
-            <button class="btn2 btn-success"><a href="./img/Sundar Raj Sharma(7).pdf" download>
+            <button class="btn2 btn-success"><a href="./img/sundar_raj_sharm_microFocusjan2021.pdf" download>
                 Download Resume</a></button>
           </div>
         </div>
@@ -166,10 +166,6 @@
           <li>
             <ol class="type">
               <li><a href="#" data-filter="*" class="active">All</a></li>
-              <!-- <li><a href="#" data-filter=".web"> Responsive Web Design</a></li>
-            <li><a href="#" data-filter=".gui">Python GUI</a></li>
-            <li><a href="#" data-filter=".dbms">DBMS Projects</a></li>
-            <li><a href="#" data-filter=".java">JAVA Projects</a></li> -->
             </ol>
           </li>
         </ul>
